--- a/gs-producing-web-service-master/complete/pom.xml
+++ b/gs-producing-web-service-master/complete/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	 <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>gs-producing-web-service</artifactId>
+	  <version>0.1.0</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
